blurring fixed

--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,7 @@ body{
     justify-content: center;
     background-size: cover;
     background-repeat: no-repeat;
+    filter: blur(30);
 }
 
 .welcome-msg{
@@ -49,6 +50,7 @@ body{
     font-size: 70px;
     text-align: center;
     display: none;
+    filter: blur(1);
 }
 
 .motivation-author{
@@ -60,6 +62,7 @@ body{
     font-size: 40px;
     text-align: right;
     display: none;
+    filter: blur(1);
 }
 
 button{
